--- a/local.settings.json
+++ b/local.settings.json
@@ -1,7 +1,7 @@
 {
 	"IsEncrypted": false,
 	"Values": {
-		"AzureWebJobsStorage": "",
+		"AzureWebJobsStorage": "microservicedema7ff",
 		"AzureWebJobsDashboard": "",
 		"FUNCTIONS_WORKER_RUNTIME": "java"
 	}
